# vkDesign

./: .gitignore  README.md  docker-compose.yml  example.env  logger.py  main.py  poll.py  pyproject.toml  sender.py  settings.py  worker.py
docs/: gemini-models.md
src/: bootstrap.py
src/domain/: context.py  handlers.py  interfaces.py  models.py  trigger.py
src/domain/generator/: models.py  service.py
src/gemini/: client.py  cost.py  models.py
src/infra/db/: engine.py  orm.py  repositories.py
src/infra/queue/: rabbitmq.py
src/infra/storage/: disk.py
src/infra/vk/: sender.py
src/openai/: client.py  cost.py  models.py
src/services/: poller.py  sender.py  worker.py
src/vk/: api.py  delayed_sender.py  messages.py
src/vk/models/: group.py  group_wall.py  long_poll.py
