[project]
name = "vkdesign"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pika>=1.3",
    "psycopg[binary]>=3.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "requests>=2.34.2",
    "sqlalchemy>=2.0",
    "structlog>=25.5.0",
]
